# pebs_research

benchmarks/page-replacement-algs/c_rewrite/: CMakeLists.txt  main.cpp
benchmarks/page-replacement-algs/c_rewrite/algorithms/: ARC.cpp  ARC.h  CAR.cpp  CAR.h  CLOCK.cpp  CLOCK.h  GenericAlgorithm.h  LRU.cpp  LRU.h  LRU_K.cpp  LRU_K.h
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/parsec/bodytrack/small/20230703-031739full_prec/: memory.txt
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/parsec/canneal/small/20230703-042556full_prec/: memory.txt
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/parsec/dedup/small/20230629-050934/: memory.txt
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/parsec/vips/small/20230703-060937full_prec/: memory.txt
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/: memory.txt
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/fifo/ARC_0.050/: stats.csv
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/fifo/ARC_0.200/: stats.csv
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/fifo/ARC_0.400/: stats.csv
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/fifo/ARC_0.600/: stats.csv
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/fifo/ARC_0.800/: stats.csv
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/fifo/ARC_1.000/: stats.csv
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/fifo/CAR_0.001/: stats.csv
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/fifo/CAR_0.200/: stats.csv
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/fifo/CAR_0.400/: stats.csv
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/pmbench/20230628-145140/fifo/CAR_0.600/: stats.csv
benchmarks/page-replacement-algs/c_rewrite/results/to_use/after/stream/20230628-143257/: memory.txt
benchmarks/page-replacement-algs/c_rewrite/tests/: cprng.h  linux_crc16.h  test.cpp  test.h
poster/: poster.indd
(+648 files in other folders)
